cluster/staging/archive/k8s/network.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-lb
  namespace: staging
spec:
  rules:
    - http:
        paths:
          # - path: /api
          #   backend:
          #     serviceName: server
          #     servicePort: http
          - path: /
            backend:
              serviceName: web
              servicePort: 80
